// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GroupAdminUsers /> render correctly group admin user with confirmation notification when adding a user 1`] = `
<div
  className="box box-primary container-fluid"
>
  <div
    className="box-header  pl-0"
  >
    <h3
      className="box-title"
    >
      <FormattedMessage
        id="group.admin.users"
        values={Object {}}
      />
    </h3>
    <a
      className="pull-right link"
      href="admin.help.addGroup.link"
      rel="noopener noreferrer"
      target="_blank"
    >
      <i
        className="fa fa-info-circle"
      />
       Aide
    </a>
  </div>
  <div
    className="box-content"
  >
    <Grid
      bsClass="container"
      componentClass="div"
      fluid={false}
    >
      <Row
        bsClass="row"
        componentClass="div"
      >
        <Col
          bsClass="col"
          componentClass="div"
          md={2}
          xs={12}
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="success"
            className="mb-10"
            disabled={false}
            href="#"
            onClick={[Function]}
          >
            <i
              className="fa fa-plus-circle"
            />
             
            <FormattedMessage
              id="group.admin.add_users"
              values={Object {}}
            />
          </Button>
        </Col>
        <Col
          bsClass="col"
          componentClass="div"
          md={2}
          xs={12}
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="success"
            className="mb-10 ml-5"
            disabled={false}
            href="#"
            onClick={[Function]}
          >
            <i
              className="fa fa-upload"
            />
             
            <FormattedMessage
              id="import-users"
              values={Object {}}
            />
          </Button>
        </Col>
      </Row>
    </Grid>
    <AlertForm
      invalid={false}
      submitFailed={false}
      submitSucceeded={true}
      submitting={false}
      valid={true}
    />
    <Connect(InjectIntl(GroupAdminModalAddUsers))
      group={
        Object {
          "id": "group4",
          "title": "Comité de suvi",
          "users": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "id": "id1",
                },
              },
            ],
          },
        }
      }
      onClose={[Function]}
      show={false}
    />
    <Connect(InjectIntl(GroupAdminModalImportUsers))
      group={
        Object {
          "id": "group4",
          "title": "Comité de suvi",
          "users": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "id": "id1",
                },
              },
            ],
          },
        }
      }
      onClose={[Function]}
      show={false}
    />
    <ListGroup
      bsClass="list-group"
      className="mt-15"
    >
      <ForwardRef(Relay(Connect(GroupAdminUsersListGroupItem)))
        groupId="group4"
        key="id1"
        user={
          Object {
            "id": "id1",
          }
        }
      />
    </ListGroup>
  </div>
</div>
`;

exports[`<GroupAdminUsers /> render correctly group admin user with confirmation notification when deleting a user 1`] = `
<div
  className="box box-primary container-fluid"
>
  <div
    className="box-header  pl-0"
  >
    <h3
      className="box-title"
    >
      <FormattedMessage
        id="group.admin.users"
        values={Object {}}
      />
    </h3>
    <a
      className="pull-right link"
      href="admin.help.addGroup.link"
      rel="noopener noreferrer"
      target="_blank"
    >
      <i
        className="fa fa-info-circle"
      />
       Aide
    </a>
  </div>
  <div
    className="box-content"
  >
    <Grid
      bsClass="container"
      componentClass="div"
      fluid={false}
    >
      <Row
        bsClass="row"
        componentClass="div"
      >
        <Col
          bsClass="col"
          componentClass="div"
          md={2}
          xs={12}
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="success"
            className="mb-10"
            disabled={false}
            href="#"
            onClick={[Function]}
          >
            <i
              className="fa fa-plus-circle"
            />
             
            <FormattedMessage
              id="group.admin.add_users"
              values={Object {}}
            />
          </Button>
        </Col>
        <Col
          bsClass="col"
          componentClass="div"
          md={2}
          xs={12}
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="success"
            className="mb-10 ml-5"
            disabled={false}
            href="#"
            onClick={[Function]}
          >
            <i
              className="fa fa-upload"
            />
             
            <FormattedMessage
              id="import-users"
              values={Object {}}
            />
          </Button>
        </Col>
      </Row>
    </Grid>
    <div
      className="d-ib"
    >
      <AlertFormSucceededMessage />
    </div>
    <Connect(InjectIntl(GroupAdminModalAddUsers))
      group={
        Object {
          "id": "group4",
          "title": "Comité de suvi",
          "users": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "id": "id1",
                },
              },
            ],
          },
        }
      }
      onClose={[Function]}
      show={false}
    />
    <Connect(InjectIntl(GroupAdminModalImportUsers))
      group={
        Object {
          "id": "group4",
          "title": "Comité de suvi",
          "users": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "id": "id1",
                },
              },
            ],
          },
        }
      }
      onClose={[Function]}
      show={false}
    />
    <ListGroup
      bsClass="list-group"
      className="mt-15"
    >
      <ForwardRef(Relay(Connect(GroupAdminUsersListGroupItem)))
        groupId="group4"
        key="id1"
        user={
          Object {
            "id": "id1",
          }
        }
      />
    </ListGroup>
  </div>
</div>
`;

exports[`<GroupAdminUsers /> render correctly group admin user with error notification when adding a user 1`] = `
<div
  className="box box-primary container-fluid"
>
  <div
    className="box-header  pl-0"
  >
    <h3
      className="box-title"
    >
      <FormattedMessage
        id="group.admin.users"
        values={Object {}}
      />
    </h3>
    <a
      className="pull-right link"
      href="admin.help.addGroup.link"
      rel="noopener noreferrer"
      target="_blank"
    >
      <i
        className="fa fa-info-circle"
      />
       Aide
    </a>
  </div>
  <div
    className="box-content"
  >
    <Grid
      bsClass="container"
      componentClass="div"
      fluid={false}
    >
      <Row
        bsClass="row"
        componentClass="div"
      >
        <Col
          bsClass="col"
          componentClass="div"
          md={2}
          xs={12}
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="success"
            className="mb-10"
            disabled={false}
            href="#"
            onClick={[Function]}
          >
            <i
              className="fa fa-plus-circle"
            />
             
            <FormattedMessage
              id="group.admin.add_users"
              values={Object {}}
            />
          </Button>
        </Col>
        <Col
          bsClass="col"
          componentClass="div"
          md={2}
          xs={12}
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="success"
            className="mb-10 ml-5"
            disabled={false}
            href="#"
            onClick={[Function]}
          >
            <i
              className="fa fa-upload"
            />
             
            <FormattedMessage
              id="import-users"
              values={Object {}}
            />
          </Button>
        </Col>
      </Row>
    </Grid>
    <AlertForm
      invalid={false}
      submitFailed={true}
      submitSucceeded={false}
      submitting={false}
      valid={false}
    />
    <Connect(InjectIntl(GroupAdminModalAddUsers))
      group={
        Object {
          "id": "group4",
          "title": "Comité de suvi",
          "users": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "id": "id1",
                },
              },
            ],
          },
        }
      }
      onClose={[Function]}
      show={false}
    />
    <Connect(InjectIntl(GroupAdminModalImportUsers))
      group={
        Object {
          "id": "group4",
          "title": "Comité de suvi",
          "users": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "id": "id1",
                },
              },
            ],
          },
        }
      }
      onClose={[Function]}
      show={false}
    />
    <ListGroup
      bsClass="list-group"
      className="mt-15"
    >
      <ForwardRef(Relay(Connect(GroupAdminUsersListGroupItem)))
        groupId="group4"
        key="id1"
        user={
          Object {
            "id": "id1",
          }
        }
      />
    </ListGroup>
  </div>
</div>
`;

exports[`<GroupAdminUsers /> render correctly group admin user with error notification when deleting a user 1`] = `
<div
  className="box box-primary container-fluid"
>
  <div
    className="box-header  pl-0"
  >
    <h3
      className="box-title"
    >
      <FormattedMessage
        id="group.admin.users"
        values={Object {}}
      />
    </h3>
    <a
      className="pull-right link"
      href="admin.help.addGroup.link"
      rel="noopener noreferrer"
      target="_blank"
    >
      <i
        className="fa fa-info-circle"
      />
       Aide
    </a>
  </div>
  <div
    className="box-content"
  >
    <Grid
      bsClass="container"
      componentClass="div"
      fluid={false}
    >
      <Row
        bsClass="row"
        componentClass="div"
      >
        <Col
          bsClass="col"
          componentClass="div"
          md={2}
          xs={12}
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="success"
            className="mb-10"
            disabled={false}
            href="#"
            onClick={[Function]}
          >
            <i
              className="fa fa-plus-circle"
            />
             
            <FormattedMessage
              id="group.admin.add_users"
              values={Object {}}
            />
          </Button>
        </Col>
        <Col
          bsClass="col"
          componentClass="div"
          md={2}
          xs={12}
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="success"
            className="mb-10 ml-5"
            disabled={false}
            href="#"
            onClick={[Function]}
          >
            <i
              className="fa fa-upload"
            />
             
            <FormattedMessage
              id="import-users"
              values={Object {}}
            />
          </Button>
        </Col>
      </Row>
    </Grid>
    <AlertForm
      invalid={false}
      submitFailed={true}
      submitSucceeded={false}
      submitting={false}
      valid={false}
    />
    <Connect(InjectIntl(GroupAdminModalAddUsers))
      group={
        Object {
          "id": "group4",
          "title": "Comité de suvi",
          "users": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "id": "id1",
                },
              },
            ],
          },
        }
      }
      onClose={[Function]}
      show={false}
    />
    <Connect(InjectIntl(GroupAdminModalImportUsers))
      group={
        Object {
          "id": "group4",
          "title": "Comité de suvi",
          "users": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "id": "id1",
                },
              },
            ],
          },
        }
      }
      onClose={[Function]}
      show={false}
    />
    <ListGroup
      bsClass="list-group"
      className="mt-15"
    >
      <ForwardRef(Relay(Connect(GroupAdminUsersListGroupItem)))
        groupId="group4"
        key="id1"
        user={
          Object {
            "id": "id1",
          }
        }
      />
    </ListGroup>
  </div>
</div>
`;
